--- a/.travis.yml
+++ b/.travis.yml
@@ -135,7 +135,7 @@ before_install:
     - eval "${MATRIX_EVAL}"
 
 script:
-    - $CXX -std=c++11 -o finite_automata finite_automata.cpp -Wall -DFINITE_AUTOMATA_TEST
+    - $CXX -std=c++11 -o finite_automata finite_automata.cpp -Wall -DFINITE_AUTOMATA_TEST -DEXCLUDE_QT
     - ls
     - ./finite_automata
 notifications:
