--- a/tests/makefile
+++ b/tests/makefile
@@ -5,8 +5,10 @@
 .PHONY: get-deps
 SHELL := /bin/bash
 BUILD_DIR := $(shell mktemp -d /tmp/tmp.XXXXXXXXX)
-FILES := `ls -1 | grep .cpp | sed 's/\.cpp//'`
+FILES := `ls -1 | grep .cpp | grep -v gcov | sed 's/\.cpp//'`
 DEPS_PATH := deps
+COV ?= gcov
+CXX ?= g++
 GTEST_PATH := $(DEPS_PATH)/googletest
 test: build-tests run-tests clean-tests
 debug-test: build-tests debug-tests clean-tests
@@ -18,18 +20,20 @@ get-deps:
 		git clone --depth 1 -b release-1.8.0 https://github.com/google/googletest.git $(GTEST_PATH) && cd $(GTEST_PATH)/googletest && cmake . && make && cd -; \
 	fi;
 build-tests: get-deps
-	if [ -z "$(CXX)" ]; then\
-		CXX := "g++"; \
-	fi; \
 	for FILE in $(FILES); do\
 		TEST_FILE="`echo $$FILE | sed 's/_test//'`";\
-		$(CXX) -o $(BUILD_DIR)/$$FILE $$FILE.cpp $(GTEST_PATH)/googletest/libgtest.a -I $(GTEST_PATH)/googletest/include/ -lpthread -g -Wall -I.. ../$$TEST_FILE.cpp -DEXCLUDE_QT -std=c++11; \
+		$(CXX) -o $(BUILD_DIR)/$$FILE $$FILE.cpp $(GTEST_PATH)/googletest/libgtest.a -I $(GTEST_PATH)/googletest/include/ -lpthread -g -Wall -I.. ../$$TEST_FILE.cpp -DEXCLUDE_QT -std=c++11  -fprofile-arcs -ftest-coverage; \
 	done;
 run-tests:
+	mkdir -p ../coverage; \
 	for TEST_EXEC in $(FILES); do\
 		$(BUILD_DIR)/$$TEST_EXEC; \
 		EXIT_CODE="$$?";\
-		if [ "$$EXIT_CODE" != "0" ]; then \
+		if [ "$$EXIT_CODE" == "0" ]; then \
+		    TEST_FILE="`echo $$TEST_EXEC | sed 's/_test//'`"; \
+		    $(COV) -r $$TEST_FILE.cpp; \
+		    lcov --capture --directory . --output-file ../coverage/lcov.info;\
+		else \
 		    exit "$$EXIT_CODE"; \
 		fi; \
 	done;
@@ -48,4 +52,4 @@ interactive-debug-test:
 	    gdb --return-child-result --args $(BUILD_DIR)/$(FILE) --gtest_catch_exceptions=0;\
 	fi;
 clean-tests:
-	rm -Rf $(BUILD_DIR)
+	rm -Rf $(BUILD_DIR) *.gcov *.gcda *.gcno
