Exports environment variables so 'make' can get it

--- a/.travis.yml
+++ b/.travis.yml
@@ -145,6 +145,9 @@ cache:
 before_install:
     - eval "${MATRIX_EVAL}"
 script:
+    - export COV
+    - export CC
+    - export CXX
     - cd tests && make test
 notifications:
   email: false
