Remove lcov from Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,6 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-4.9
-            - lcov
       env:
          - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9 && COV=gcov-4.9"
 
@@ -21,7 +20,6 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-5
-            - lcov
       env:
          - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5 && COV=gcov-5"
 
@@ -33,7 +31,6 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-6
-            - lcov
       env:
         - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6 && COV=gcov-6"
 
@@ -44,7 +41,7 @@ matrix:
         directories:
           - $HOME/Library/Caches/Homebrew
       env:
-        - MATRIX_EVAL="CC=gcc-4.9 && && CXX=g++-4.9 && COV=gcov-4.9 && sudo xcode-select -s /Library/Developer/CommandLineTools && brew install lcov"
+        - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9 && COV=gcov-4.9 && sudo xcode-select -s /Library/Developer/CommandLineTools"
 
     - os: osx
       osx_image: xcode8
@@ -52,7 +49,7 @@ matrix:
         directories:
           - $HOME/Library/Caches/Homebrew
       env:
-        - MATRIX_EVAL="brew install gcc5 lcov && sudo xcode-select -s /Library/Developer/CommandLineTools && CC=gcc-5 && CXX=g++-5 && COV=gcov-4.9"
+        - MATRIX_EVAL="brew install gcc5  && sudo xcode-select -s /Library/Developer/CommandLineTools && CC=gcc-5 && CXX=g++-5 && COV=gcov-4.9"
 
     - os: osx
       osx_image: xcode8
@@ -60,7 +57,7 @@ matrix:
         directories:
           - $HOME/Library/Caches/Homebrew
       env:
-        - MATRIX_EVAL="brew install gcc lcov && sudo xcode-select -s /Library/Developer/CommandLineTools && CC=gcc-7 && CXX=g++-7 && COV=gcov-4.9"
+        - MATRIX_EVAL="brew install gcc  && sudo xcode-select -s /Library/Developer/CommandLineTools && CC=gcc-7 && CXX=g++-7 && COV=gcov-4.9"
 
      # works on Precise and Trusty
     - os: linux
@@ -71,7 +68,6 @@ matrix:
             - llvm-toolchain-precise-3.6
           packages:
             - clang-3.6
-            - lcov
       env:
         - MATRIX_EVAL="CC=clang-3.6 && CXX=clang++-3.6 && COV=llvm-cov-3.6"
 
@@ -84,7 +80,6 @@ matrix:
             - llvm-toolchain-precise-3.7
           packages:
             - clang-3.7
-            - lcov
       env:
         - MATRIX_EVAL="CC=clang-3.7 && CXX=clang++-3.7 && COV=llvm-cov-3.7"
 
@@ -97,7 +92,6 @@ matrix:
             - llvm-toolchain-precise-3.8
           packages:
             - clang-3.8
-            - lcov
       env:
         - MATRIX_EVAL="CC=clang-3.8 && CXX=clang++-3.8 && COV=llvm-cov-3.8"
 
@@ -110,7 +104,6 @@ matrix:
             - llvm-toolchain-trusty-3.9
           packages:
             - clang-3.9
-            - lcov
       env:
         - MATRIX_EVAL="CC=clang-3.9 && CXX=clang++-3.9 && COV=llvm-cov-3.9"
 
@@ -123,7 +116,6 @@ matrix:
             - llvm-toolchain-trusty-4.0
           packages:
             - clang-4.0
-            - lcov
       env:
         - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0 && COV=llvm-cov-4.0"
 
@@ -136,7 +128,6 @@ matrix:
             - llvm-toolchain-trusty
           packages:
             - clang-5.0
-            - lcov
       env:
         - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0 && COV=llvm-cov-5.0"
 cache:
